Name:           hails-auth
Version:        0.1
build-type:     Simple
License:        GPL-2
License-File:   LICENSE
Author:         HAILS team
Maintainer:     Amit Levy <levya at cs.stanford dot edu>, Deian Stefan  <deian at cs dot stanford dot edu>
Stability:      experimental
Synopsis:       Authentication app for Hails platforms
Category:       Web
Cabal-Version:  >= 1.8

Description:
        Authentication app for Hails platforms

Source-repository head
  Type:     git
  Location: http://www.github.com/scslab/hails-bin.git

Executable hails-auth
  Main-is: Main.hs
  ghc-options: -Wall
  Build-Depends: base >= 4.5 && < 5,
                 regex-posix >= 0.95 && < 1.0,
                 containers >= 0.4.2 && < 0.5,
                 bytestring >= 0.9 && < 1,
                 containers >= 0.4.2 && < 0.5,
                 iterIO >= 0.2.2 && < 0.3,
                 iterio-server >= 0.3 && < 0.4,
                 mongoDB >= 1.1.2 && < 1.3,
                 structured-mongoDB >= 0.3 && < 1.0,
                 bson >= 0.1 && < 0.2,
                 transformers >= 0.2.2.0 && < 0.3,
                 blaze-html >= 0.4.3.3 && < 0.5,
                 bcrypt >= 0.0.3 && < 0.1,
                 SHA >= 1.5 && < 2,
                 mtl >= 2.0 && < 2.1
